# game.libretro.stella

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: sync-addon-metadata-translations.yml
debian/: control
depends/common/stella/: 0001-Android-Build-with-std-c-2a-for-NDK-21.patch  0001-Fix-compile-error-on-macOS.patch  0002-Remove-dependency-on-include-numbers.patch  CMakeLists.txt  stella.txt
game.libretro.stella/: addon.xml  addon.xml.in
game.libretro.stella/resources/: buttonmap.xml  settings.xml  topology.xml
game.libretro.stella/resources/language/resource.language.af_za/: strings.po
game.libretro.stella/resources/language/resource.language.am_et/: strings.po
game.libretro.stella/resources/language/resource.language.ar_dz/: strings.po
game.libretro.stella/resources/language/resource.language.ar_sa/: strings.po
game.libretro.stella/resources/language/resource.language.ast_es/: strings.po
game.libretro.stella/resources/language/resource.language.az_az/: strings.po
game.libretro.stella/resources/language/resource.language.be_by/: strings.po
game.libretro.stella/resources/language/resource.language.bg_bg/: strings.po
game.libretro.stella/resources/language/resource.language.bs_ba/: strings.po
game.libretro.stella/resources/language/resource.language.ca_es/: strings.po
game.libretro.stella/resources/language/resource.language.cs_cz/: strings.po
game.libretro.stella/resources/language/resource.language.cy_gb/: strings.po
gameclient.stella/: addon.xml
(+79 files in other folders)
